# at-ecs-trash-try

./: README.md
1/: Cargo.toml
1/src/: archetype.rs  call.rs  chunk.rs  component.rs  entity.rs  lib.rs  scheduler.rs  system.rs  type_info.rs  unknown_component.rs  world.rs
1/src/tests/: base.rs
2/: Cargo.toml
2/src/: chunk.rs  entity_id.rs  lib.rs  system.rs  type_info.rs
2/src/tests/: base.rs
